# SpeedEngine

./: CMakeLists.txt  LICENSE  main.cpp  speedEngine.puml
Framework/incl/Asset/: AssetManager.hpp
Framework/incl/Audio/: AStreamFile.hpp  Audio.hpp  AudioFile.hpp  StreamFile.hpp  audioManager.hpp
Framework/incl/Error/: Exception.hpp  LoadSong.hpp  SceneError.hpp
Framework/incl/Event/: InputManager.hpp
Framework/incl/Scene/: Ascene.hpp  IScene.hpp  SceneManager.hpp
Framework/incl/Scene/test/: TestScene.hpp
Framework/src/Asset/: AssetManager.cpp
Framework/src/Audio/: AudioFile.cpp  audioManager.cpp
Framework/src/Event/: InputManager.cpp
Framework/src/Scene/: Ascene.cpp  SceneManager.cpp
Framework/src/Scene/test/: TestScene.cpp
